[metadata]
name = wasp
version = attr: wasp.__version__
description = Score sequence labelling for segmentation
license = MIT
author = Loïc Grobol
author_email = loic.grobol@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Environment :: Console
keywords =
    nlp
    segmentation


[options]
packages = find:
include_package_data=True
python_requires = >=3.7
install_requires =
    docopt-ng >= 0.7
    numpy
    scipy

[options.entry_points]
console_scripts =
    wasp = wasp.main:main_entry_point

[flake8]
max-line-length = 100
ignore = E203,E266,E501,W503
max-complexity = 18

[mypy]
allow_redefinition = True
warn_unreachable = True